[package]
name = "mosse"
version = "0.1.0"
edition = "2021"
authors = ["Jurriaan Barkey Wolf <jjhbarkeywolf@gmail.com>"]

[dependencies]
image = "0.23.0"
rustfft = "6.0.1"
imageproc = "0.22.0"

# for font rendering on output/debug frames (same version as imageproc uses)
rusttype = "0.9.2"

[dev-dependencies]
time = "0.3.11"

[profile.release]
lto = true