[package]
name = "mosse"
version = "0.1.0"
edition = "2021"
authors = ["Jurriaan Barkey Wolf <jjhbarkeywolf@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rayon"]
rayon = ["imageproc/rayon", "image/jpeg_rayon"]

[dependencies]
image = { version = "0.24.2", default-features = false, features = [
    "png",
    "jpeg",
] }
rustfft = "6.0.1"
imageproc = { version = "0.23.0", default-features = false }

# for font rendering on output/debug frames (same version as imageproc uses)
rusttype = "0.9.2"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
time = "0.3.11"

[profile.release]
lto = true
